<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".view.MainActivity">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Compare sus textos"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:background="@drawable/custom_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/primerTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ingrese su 1° texto: "
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.252" />

        <EditText
            android:id="@+id/entrada1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="222dp"
            tools:layout_editor_absoluteY="167dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/segundoTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ingrese su 2° texto: "
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.367" />

        <EditText
            android:id="@+id/entrada2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            tools:layout_editor_absoluteX="222dp"
            tools:layout_editor_absoluteY="249dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2">

        <Button
            android:id="@+id/botonComparar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comparar"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="379dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textoComparacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBoton" />

</androidx.constraintlayout.widget.ConstraintLayout>